--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_business_classes.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_business_classes.html
@@ -66,8 +66,14 @@
                     name="action" value="manage_plugin_applications" /> <input
                     type="hidden" name="plugin_id" value="${plugin_id}" />
 
-                <button type="submit" name="goToManageAdminFeatures" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_manage_business_classes.buttonBack}</button>
-                <button type="submit" name="goToManagePluginApplications" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_manage_business_classes.buttonNext}</button>
+                <button type="submit" name="goToManageAdminFeatures" class="btn btn-primary">
+                    <i class="icon-chevron-left icon-white"></i>
+                    #i18n{pluginwizard.pluginwizard_manage_business_classes.buttonBack}
+                </button>
+                <button type="submit" name="goToManagePluginApplications" class="btn btn-primary">
+                    #i18n{pluginwizard.pluginwizard_manage_business_classes.buttonNext}
+                    <i class="icon-chevron-right icon-white"></i>
+                </button>
             </form>
         </div>
     </div>
