--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_admin_features.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_admin_features.html
@@ -62,8 +62,14 @@
                 <input type="hidden" name="page" value="pluginwizard" /> 
                 <input type="hidden" name="action" value="manage_plugin_applications" /> 
                 <input type="hidden" name="plugin_id" value="${plugin_id}" />                                        
-                <button type="submit" name="goToPluginModification" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonBack}</button>                        
-                <button type="submit" name="goToManageBusinessClasses" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonNext}</button>  
+                <button type="submit" name="goToPluginModification" class="btn btn-primary">
+                    <i class="icon-chevron-left icon-white"></i>
+                    #i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonBack}
+                </button>                        
+                <button type="submit" name="goToManageBusinessClasses" class="btn btn-primary">
+                    #i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonNext}
+                    <i class="icon-chevron-right icon-white"></i>
+                </button>  
         </div>   
         </form>
     </div>
