--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_applications.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_applications.html
@@ -55,7 +55,7 @@
                            title="#i18n{pluginwizard.pluginwizard_manage_plugin_applications.buttonRemoveApplication}" >
                             <i class="icon-trash icon-white"></i>
                         </a>
-                   </td>
+                    </td>
                     </#list>
                     </#if>
 
@@ -71,8 +71,14 @@
                     name="action" value="manage_plugin_applications" /> <input
                     type="hidden" name="plugin_id" value="${plugin_id}" />
 
-                <button type="submit" name="goToManageBusinessClasses" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_manage_plugin_applications.buttonBack}</button>
-                <button type="submit" name="goToManagePluginPortlets" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_manage_plugin_applications.buttonNext}</button>
+                <button type="submit" name="goToManageBusinessClasses" class="btn btn-primary">
+                    <i class="icon-chevron-left icon-white"></i>
+                    #i18n{pluginwizard.pluginwizard_manage_plugin_applications.buttonBack}
+                </button>
+                <button type="submit" name="goToManagePluginPortlets" class="btn btn-primary">
+                    #i18n{pluginwizard.pluginwizard_manage_plugin_applications.buttonNext}
+                    <i class="icon-chevron-right icon-white"></i>
+                </button>
             </form>
         </div>
     </div>
