--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_portlets.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_portlets.html
@@ -72,8 +72,14 @@
                     name="action" value="manage_plugin_portlets" /> <input
                     type="hidden" name="plugin_id" value="${plugin_id}" />
 
-                <button type="submit" name="goToManagePluginApplications" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_manage_plugin_portlets.buttonBack}</button>
-                <button type="submit" name="goToGetRecapitulate" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_manage_plugin_portlets.buttonNext}</button>
+                <button type="submit" name="goToManagePluginApplications" class="btn btn-primary">
+                    <i class="icon-chevron-left icon-white"></i>
+                    #i18n{pluginwizard.pluginwizard_manage_plugin_portlets.buttonBack}
+                </button>
+                <button type="submit" name="goToGetRecapitulate" class="btn btn-primary">
+                    #i18n{pluginwizard.pluginwizard_manage_plugin_portlets.buttonNext}
+                    <i class="icon-chevron-right icon-white"></i>
+                </button>
             </form>
         </div>
     </div>
