--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
@@ -68,7 +68,8 @@
 
 
         <div class="form-actions">
-            <a class="btn btn-primary" href="jsp/site/Portal.jsp?page=pluginwizard&plugin_id=${plugin_id}" >
+            <a class="btn btn-primary" href="jsp/site/Portal.jsp?page=pluginwizard&plugin_id=${plugin_id}&goToManagePluginPortlets" >
+                <i class="icon-chevron-left icon-white"></i>
                 #i18n{pluginwizard.pluginwizard_plugin_recapitulate.buttonBack}
             </a>
             <a class="btn btn-primary" href="jsp/site/plugins/pluginwizard/DownloadZip.jsp?page=wizard&action=zip&plugin_id=${plugin_id}" >
