--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_jspbean_template.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_jspbean_template.html
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002-2009, Mairie de Paris
+ * Copyright (c) 2002-2013, Mairie de Paris
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -187,7 +187,7 @@ private static final String PROPERTY_PAGE_TITLE_MANAGE_${plugin_model.pluginName
                 _nDefaultItemsPerPage );
         UrlItem url = new UrlItem(  JSP_MANAGE_${business_class.businessClass?upper_case}S);
         String strUrl = url.getUrl(  );
-        Collection<${business_class.businessClass?cap_first}> list${business_class.businessClass?upper_case}s = ${business_class.businessClass?cap_first}Home.get${business_class.businessClass?cap_first}sList( getPlugin(  ) );
+        Collection<${business_class.businessClass?cap_first}> list${business_class.businessClass?upper_case}s = ${business_class.businessClass?cap_first}Home.get${business_class.businessClass?cap_first}sList( );
         Paginator paginator = new Paginator( (List<${business_class.businessClass?cap_first}>) list${business_class.businessClass?upper_case}s, _nItemsPerPage, strUrl , PARAMETER_PAGE_INDEX, _strCurrentPageIndex );
 
         Map<String, Object> model = new HashMap<String, Object>(  );
@@ -255,7 +255,7 @@ private static final String PROPERTY_PAGE_TITLE_MANAGE_${plugin_model.pluginName
 			
 			</#if>
      	</#list>
-      ${business_class.businessClass?cap_first}Home.create( ${business_class.businessClass?lower_case}, getPlugin(  ) );
+      ${business_class.businessClass?cap_first}Home.create( ${business_class.businessClass?lower_case} );
       return JSP_REDIRECT_TO_MANAGE_${business_class.businessClass?upper_case}S;
     }
     
@@ -281,7 +281,7 @@ private static final String PROPERTY_PAGE_TITLE_MANAGE_${plugin_model.pluginName
     public String doRemove${business_class.businessClass?cap_first}( HttpServletRequest request )
     {
         int nId = Integer.parseInt( request.getParameter( PARAMETER_${business_class.businessClassParamDeclaration}_${business_class.primaryKey?upper_case} ) );
-        ${business_class.businessClass?cap_first}Home.remove( nId, getPlugin(  ) );
+        ${business_class.businessClass?cap_first}Home.remove( nId );
         
         return JSP_REDIRECT_TO_MANAGE_${business_class.businessClass?upper_case}S;
     }
@@ -296,7 +296,7 @@ private static final String PROPERTY_PAGE_TITLE_MANAGE_${plugin_model.pluginName
     {
         setPageTitleProperty( PROPERTY_PAGE_TITLE_MODIFY_${business_class.businessClass?upper_case} );
         int nId = Integer.parseInt( request.getParameter( PARAMETER_${business_class.businessClassParamDeclaration}_${business_class.primaryKey?upper_case} ) );
-        ${business_class.businessClass?cap_first} ${business_class.businessClass?lower_case} =${business_class.businessClass?cap_first}Home.findByPrimaryKey( nId, getPlugin(  ) );
+        ${business_class.businessClass?cap_first} ${business_class.businessClass?lower_case} =${business_class.businessClass?cap_first}Home.findByPrimaryKey( nId );
 
         Map<String, Object> model = new HashMap<String, Object>(  );
         model.put( MARK_${business_class.businessClass?upper_case}, ${business_class.businessClass?lower_case} );
@@ -315,7 +315,7 @@ private static final String PROPERTY_PAGE_TITLE_MANAGE_${plugin_model.pluginName
     public String doModify${business_class.businessClass?cap_first}( HttpServletRequest request )
     {
       int nId = Integer.parseInt( request.getParameter( PARAMETER_${business_class.businessClassParamDeclaration}_${business_class.primaryKey?upper_case} ) ); 
-      ${business_class.businessClass?cap_first} ${business_class.businessClass?lower_case} =${business_class.businessClass?cap_first}Home.findByPrimaryKey( nId, getPlugin(  ) );
+      ${business_class.businessClass?cap_first} ${business_class.businessClass?lower_case} =${business_class.businessClass?cap_first}Home.findByPrimaryKey( nId );
         <#list business_class.attributes as attribute>  
         if ( request.getParameter( PARAMETER_${business_class.businessClassParamDeclaration}_${attribute.attributeName?upper_case} ).equals( "" ) )
         {
@@ -328,7 +328,7 @@ private static final String PROPERTY_PAGE_TITLE_MANAGE_${plugin_model.pluginName
 			${business_class.businessClass?lower_case}.set${attribute.name?cap_first}( n${attribute.name?cap_first} );
 			</#if>       
      	</#list>
-        ${business_class.businessClass?cap_first}Home.update( ${business_class.businessClass?lower_case}, getPlugin(  ) );
+        ${business_class.businessClass?cap_first}Home.update( ${business_class.businessClass?lower_case} );
         return JSP_REDIRECT_TO_MANAGE_${business_class.businessClass?upper_case}S;
     }
 </#if>    
