--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_spring_context_xml.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_spring_context_xml.html
@@ -3,13 +3,13 @@
 <beans>
 <#list business_classes as business_class>
 <#if business_class?? > 
- <bean id="${business_class.businessClass?uncap_first}DAO"  class="fr.paris.lutece.plugins.${plugin.pluginName}.business.${business_class.businessClass?cap_first}DAO" />  
+ <bean id="${plugin.pluginName}.${business_class.businessClass?uncap_first}DAO"  class="fr.paris.lutece.plugins.${plugin.pluginName}.business.${business_class.businessClass?cap_first}DAO" />  
 </#if>    
 </#list>
 <#list portlets as portlet>
 <#if portlet?? >
 <#assign nBeginIndex = portlet.pluginPortletTypeName?last_index_of("_")><#assign portletName = portlet.pluginPortletTypeName?substring(0, nBeginIndex)?lower_case>
-	<bean id="${portletName?lower_case}PortletDAO"  class="fr.paris.lutece.plugins.${plugin.pluginName}.business.portlet.${portletName?cap_first}PortletDAO" />    
+	<bean id="${plugin.pluginName}.${portletName?lower_case}PortletDAO"  class="fr.paris.lutece.plugins.${plugin.pluginName}.business.portlet.${portletName?cap_first}PortletDAO" />    
 </#if>    
 </#list>
 </beans>
