--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_html_template_model.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_html_template_model.html
@@ -75,48 +75,47 @@
 <#case "3">
 <#if business_class?? > 
 
-<div class="content-box" >
-    <h4>${i18n_open}${business_class.businessPluginName?lower_case}.manage_${business_class.businessClass?lower_case}.tableLabel${i18n_close}</h4>    
+<div class="row-fluid" >
+    <div class="span12">
 
-    <div class="pull-right">
         <form method="post"  action="jsp/admin/plugins/${business_class.businessPluginName?lower_case}/Create${business_class.businessClass?cap_first}.jsp">
-            <button class="btn btn-primary" type="submit">
+            <button class="btn btn-primary pull-right" type="submit">
                 <i class="icon-plus icon-white"></i>
-                ${i18n_open}${business_class.businessPluginName?lower_case}.manage_${business_class.businessClass?lower_case}.buttonAdd${business_class.businessClass?cap_first}${i18n_close}"
+                ${i18n_open}${business_class.businessPluginName?lower_case}.manage_${business_class.businessClass?lower_case}.buttonAdd${business_class.businessClass?cap_first}${i18n_close}
             </button>
         </form>
-    </div>
 
+    <h4>${i18n_open}${business_class.businessPluginName?lower_case}.manage_${business_class.businessClass?lower_case}.tableLabel${i18n_close}</h4>    
+
+    <${macro}paginationAdmin paginator=paginator combo=1 />
+    
     <table class="table table-condensed table-striped">
         <tr>
             <#list business_class.attributes as attribute>
-            <#if attribute.attributeName = business_class.primaryKey>
-
-        <input type="hidden" id="${business_class.businessClassParam}_${attribute.attributeName?lower_case}" name="${business_class.businessClassParam}_${attribute.attributeName?lower_case}"  />
-        <#else>
-
-        <th>${i18n_open}${business_class.businessPluginName?lower_case}.manage_${business_class.businessClass?lower_case}.column${attribute.attributeName?cap_first}${i18n_close}</th>
-        </#if>
-        </#list>
-        <th>${i18n_open}${business_class.businessPluginName?lower_case}.manage_${business_class.businessClass?lower_case}.columnAction${i18n_close}</th>
+                <#if attribute.attributeName = business_class.primaryKey>
+                    <input type="hidden" id="${business_class.businessClassParam}_${attribute.attributeName?lower_case}" name="${business_class.businessClassParam}_${attribute.attributeName?lower_case}"  />
+                <#else>
+                    <th>${i18n_open}${business_class.businessPluginName?lower_case}.manage_${business_class.businessClass?lower_case}.column${attribute.attributeName?cap_first}${i18n_close}</th>
+                </#if>
+            </#list>
+            <th>${i18n_open}portal.util.labelActions${i18n_close}</th>
         </tr>
-        <${variable}list ${business_class.businessClass?lower_case}_list as ${business_class.businessClass?lower_case} >
+            <${variable}list ${business_class.businessClass?lower_case}_list as ${business_class.businessClass?lower_case} >
         <tr>
-
             <#list business_class.attributes as attribute>
-
-            <#if attribute.attributeName = business_class.primaryKey>
-
-        <input type="hidden" id="${business_class.businessClassParam}_${attribute.attributeName?lower_case}" name="${business_class.businessClassParam}_${attribute.attributeName?lower_case}"  />
-        <#else>
-        <#if attribute.attributeName = business_class.classDescription>
-        <td>${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}
-        </td>
-        <#else>
-        <td>${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}</td>
-        </#if>
-        </#if>
-
+                <#if attribute.attributeName = business_class.primaryKey>
+                    <input type="hidden" id="${business_class.businessClassParam}_${attribute.attributeName?lower_case}" name="${business_class.businessClassParam}_${attribute.attributeName?lower_case}"  />
+                <#else>
+                    <#if attribute.attributeName = business_class.classDescription>
+                        <td>
+                            ${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}
+                        </td>
+                    <#else>
+                        <td>
+                            ${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}
+                        </td>
+                    </#if>
+                </#if>                
         </#list>
         <td>
             <a href="jsp/admin/plugins/${business_class.businessPluginName?lower_case}/Modify${business_class.businessClass?cap_first}.jsp?${business_class.businessClass?lower_case}_${business_class.primaryKey}=${bra_open}${business_class.businessClassParam?lower_case}.${business_class.primaryKeyName?uncap_first}${bra_close}"
@@ -133,7 +132,9 @@
         </${variable}list>
     </table>
 
+    <${macro}paginationAdmin paginator=paginator />
 
+    </div>
 </div>
 
 </#if>  
