--- a/webapp/WEB-INF/templates/admin/plugins/pluginwizard/create_configurationkey.html
+++ b/webapp/WEB-INF/templates/admin/plugins/pluginwizard/create_configurationkey.html
@@ -1,24 +1,30 @@
-<div class="content-box" >
-    
-    <h2>#i18n{pluginwizard.create_configurationkey.tableLabel}</h2>
-    
-    <form method="post"  name="create_configurationkey" id="create_configurationkey" action="jsp/admin/plugins/pluginwizard/DoCreateConfigurationKey.jsp">
-            <p>
-            <label for="configurationkey_keyDescription" >#i18n{pluginwizard.create_configurationkey.rowTitleConfigurationDescription} * :</label>
-            <input type="text" id="configurationkey_key_description" name="configurationkey_key_description" size="60" maxlength="50" tabindex="1" />
-            </p>
-            <p>
-            <label for="configurationkey_keyValue" >#i18n{pluginwizard.create_configurationkey.rowTitleConfigurationValue} * :</label>
-            <input type="text" id="configurationkey_key_value" name="configurationkey_key_value" size="60" maxlength="50" tabindex="1" />
-            
-        </p>
-        <p>   
-        	<input type="submit" value="#i18n{pluginwizard.create_configurationkey.buttonValidate}" class="button" tabindex="3" />
-        </p>
-        
-    </form>
- 
-    
+<div class="row-fluid" >
+    <div class="span12">
+        <form class="form-horizontal" method="post" name="create_configurationkey" id="create_configurationkey" action="jsp/admin/plugins/pluginwizard/DoCreateConfigurationKey.jsp">
+            <fieldset>
+                <legend>#i18n{pluginwizard.create_configurationkey.tableLabel}</legend>
+                <div class="control-group">
+                    <label class="control-label" for="configurationkey_keyDescription" >#i18n{pluginwizard.create_configurationkey.rowTitleConfigurationDescription} * :</label>
+                    <div class="controls">
+                        <input type="text" id="configurationkey_key_description" name="configurationkey_key_description" maxlength="50" tabindex="1" />
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label" for="configurationkey_keyValue" >#i18n{pluginwizard.create_configurationkey.rowTitleConfigurationValue} * :</label>
+                    <div class="controls">
+                        <input type="text" id="configurationkey_key_value" name="configurationkey_key_value" maxlength="50" tabindex="2" />
+                    </div>
+                </div>
+
+                <div class="form-actions">   
+                    <button class="btn btn-primary" type="submit"  tabindex="3" >
+                        #i18n{pluginwizard.create_configurationkey.buttonValidate} 
+                    </button>
+                    <input class="btn" type="button" onclick="javascript:history.go(-1)" value="#i18n{portal.util.labelCancel}" />	
+                </div>
+            </fieldset>
+        </form>
+    </div>
 </div>
 
 
