--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
@@ -10,61 +10,86 @@
     </div>
 
     <div class="span8">
-        <h4>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.pageTitle} - #i18n{pluginwizard.pluginwizard_create_plugin.labelStepOf}   #i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelGenerateStep}</h4>                 
+        <h2>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.pageTitle} </h2> 
 
-        #i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelSummary}
-        #i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelPluginName} : 
-        <h5><#if plugin_model.pluginName??>${plugin_model.pluginName}</#if></h5>
-        <fieldset>
-            <legend>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelAdminFeatures}</legend>
-            <div class="span-3">
+        <div class="well well-large">
+
+            <h3>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelPluginName} : <#if plugin_model.pluginName??>${plugin_model.pluginName}</#if></h3>
+
+            <br>
+            <h4>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelSummary} :</h4>
+            <br>
+            <ul>
                 <#if admin_features?? > 
-                <ul>
-                    <#list admin_features as feature >
-                    <li>${feature.pluginFeatureDescription}</li>
-                    </#list> 
-                </ul>
+                <#if admin_features?size gt 0 > 
+                <li>
+                    <h4>
+                        <span class="badge badge-info">${admin_features?size}</span> &nbsp; 
+                        <#if admin_features?size = 1 > 
+                        #i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelAdminFeature}
+                        <#else>
+                        #i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelAdminFeatures}
+                        </#if>
+                    </h4>
+                </li>
                 </#if>
-            </div>
-        </fieldset>
-
-        <fieldset>
-            <legend>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelBusinessClasses}</legend>
-            <div class="span-3">
+                </#if>
 
                 <#if business_classes?? > 
-                <ul>
-                    <#list business_classes as business >
-                    <li>	${business.businessClass}</li>
-                    </#list> 
-                </ul>
+                <#if business_classes?size gt 0 > 
+                <li>
+                    <h4>
+                        <span class="badge badge-info">${business_classes?size}</span> &nbsp; 
+                        <#if business_classes?size = 1 > 
+                        #i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelBusinessClasse}
+                        <#else>
+                        #i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelBusinessClasses}
+                        </#if>
+                    </h4>
+                    <ul>
+                        <#list business_classes as business >
+                        <li> <h5> ${business.businessClass} </h5> </li>
+                        </#list> 
+                    </ul>
+                </li>
                 </#if>
-            </div>
-        </fieldset>
+                </#if>
 
-        <fieldset>
-            <legend>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelXPages}</legend>
-            <div class="span-2 last">
                 <#if plugin_applications?? > 
-                <ul><#list plugin_applications as plugin_application > 
-                    <li>${plugin_application.applicationName}</li>
-                    </#list> 
-                </ul>
+                <#if plugin_applications?size gt 0>
+                <li>
+                    <h4>
+                        <span class="badge badge-info">${plugin_applications?size}</span> &nbsp; 
+                        <#if plugin_applications?size = 1 > 
+                        #i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelXPage}
+                        <#else>
+                        #i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelXPages}
+                        </#if>
+                    </h4>
+                </li>
                 </#if>
-            </div>
-        </fieldset>
+                </#if>
 
-        <fieldset>
-            <legend>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelPortlets}</legend>
-            <div class="span-3">
                 <#if plugin_portlets?? >
-                <ul> <#list plugin_portlets as plugin_portlet >
-                    <li>${plugin_portlet.pluginPortletClass}</li>
-                    </#list>
-                </ul>
+                <#if plugin_portlets?size gt 0>
+                <li>
+                    <h4>
+                        <span class="badge badge-info">${plugin_portlets?size}</span> &nbsp; 
+                        <#if plugin_portlets?size = 1 > 
+                        #i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelPortlet}
+                        <#else>
+                        #i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelPortlets}
+                        </#if>
+                    </h4>
+                </li>
                 </#if>
-            </div>
-        </fieldset>
+                </#if>
+
+            </ul>
+        </div>
+        <div class="alert alert-block">
+            #i18n{pluginwizard.pluginwizard_plugin_recapitulate.alertProperties}
+        </div>
 
 
         <div class="form-actions">
@@ -73,6 +98,7 @@
                 #i18n{pluginwizard.pluginwizard_plugin_recapitulate.buttonBack}
             </a>
             <a class="btn btn-primary" href="jsp/site/plugins/pluginwizard/DownloadZip.jsp?page=wizard&action=zip&plugin_id=${plugin_id}" >
+                <i class=" icon-download-alt icon-white">  </i>
                 #i18n{pluginwizard.pluginwizard_plugin_recapitulate.buttonGenerate}
             </a>
         </div>
