PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46178 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
@@ -36,10 +36,8 @@
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeKey} * : </label>                            
                     <div class="controls">                                                                                                     
                         <select class="input-small" name="primary_key">    				                                 				                              
-                            <option value="0">Faux                              
-                            </option>    	                          
-                           <option value="1">Vrai                    
-                            </option>    				                              
+                            <option value="0" selected >#i18n{portal.util.labelNo}</option>    	                          
+                            <option value="1">#i18n{portal.util.labelYes}</option>    				                              
                          </select>                
                     </div>  
                 </div>
@@ -48,10 +46,8 @@
                     <label class="control-label">Description * : </label>                            
                     <div class="controls">                                                                                                     
                         <select class="input-small" name="class_description">    				                                 				                              
-                            <option value="0" >Faux                              
-                            </option>    	                          
-                            <option value="1">Vrai                    
-                            </option>    				                              
+                            <option value="0" selected >#i18n{portal.util.labelNo}</option>    	                          
+                            <option value="1" >#i18n{portal.util.labelYes}</option>    				                              
                         </select>                
                     </div>                         
                 </div>
