--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_portlet_jspbean.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_portlet_jspbean.html
@@ -45,6 +45,7 @@ import fr.paris.lutece.util.ReferenceList;
 import fr.paris.lutece.util.html.HtmlTemplate;
 
 import java.util.HashMap;
+import java.util.Map;
 
 import javax.servlet.http.HttpServletRequest;
 
